Fixes BugHerd #9 - Regular spacing under each fieldset

--- a/themes/bootstrap/nesi_bootstrap/css/nesi_bootstrap.css
+++ b/themes/bootstrap/nesi_bootstrap/css/nesi_bootstrap.css
@@ -686,7 +686,7 @@ input, button, select, textarea {
 }
 
 #nesi-mstep-proposal-step-2 fieldset {
-  padding-bottom: 150px;
+  padding-bottom: 80px;
 }
 
 #nesi-mstep-proposal-step-2 label .help-block,
